<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/headerNowPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorUdacityLogo"
        android:text="@string/header_mediaPlayer"/>

    <LinearLayout
        android:id="@+id/buttonsPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerNowPlaying">

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/play" />

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/buttonPlay"
            android:layout_weight="1"
            android:text="@string/pause" />

        <Button
            android:id="@+id/buttonRewind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/buttonPause"
            android:layout_weight="1"
            android:text="@string/rewind" />

        <Button
            android:id="@+id/buttonForward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/buttonRewind"
            android:layout_weight="1"
            android:text="@string/forward" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonsPlayer" />

</RelativeLayout>