<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context="com.udacity.music.HomeActivity">


    <TextView
        android:id="@+id/headerDonations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:textColor="@color/colorUdacityLogo" />

    <TextView
        android:id="@+id/donateTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/donations_helpUs"
        android:textColor="@color/colorUdacityLogo"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/donateTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/click_here"
            android:textColor="@color/colorUdacityLogo"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/payPalLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="top"
            android:src="@drawable/donate_pay_pal"
            android:textColor="@color/colorUdacityLogo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigationBarLibrary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/homeXmlFromDonations"
            style="@style/NavigationStyle"
            android:drawableTop="@drawable/ic_home_black_24dp"
            android:text="@string/screen_home" />

        <TextView
            android:id="@+id/searchXmlFromDonations"
            style="@style/NavigationStyle"
            android:drawableTop="@drawable/ic_search_black_24dp"
            android:text="@string/screen_search" />

        <TextView
            android:id="@+id/libraryXmlFromDonations"
            style="@style/NavigationStyle"
            android:drawableTop="@drawable/ic_library_music_black_24dp"
            android:text="@string/screen_library" />

        <TextView
            android:id="@+id/paymentXmlFromDonations"
            style="@style/NavigationStyle"
            android:drawableTop="@drawable/ic_credit_card_black_24dp"
            android:text="@string/donations_library" />

    </LinearLayout>

</LinearLayout>
