<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    app:actionViewClass="android.support.v7.widget.SearchView"
    app:showAsAction="collapseActionView|ifRoom"
    tools:context="com.udacity.music.MainActivity">

    <TextView
        android:id="@+id/headerSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:textColor="@color/colorUdacityLogo" />

    <LinearLayout
        style="@style/NavigationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/menu_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.27"
            android:background="@drawable/gradient"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:gravity="center"
            android:hint="@string/search_here"
            android:imeActionLabel="Search"
            android:imeOptions="actionSearch"
            android:textColor="#FFF"
            android:textColorHint="#7affffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigationBarlibrary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/homeXmlFromSearch"
            style="@style/NavigationStyle"
            android:drawableTop="@drawable/ic_home_black_24dp"
            android:text="@string/screen_home" />

        <TextView
            style="@style/NavigationStyle"
            android:drawableTop="@drawable/ic_search_black_24dp"
            android:text="@string/screen_search" />

        <TextView
            android:id="@+id/libraryXmlFromSearch"
            style="@style/NavigationStyle"
            android:drawableTop="@drawable/ic_library_music_black_24dp"
            android:text="@string/screen_library" />

        <TextView
            android:id="@+id/paymentXmlFromSearch"
            style="@style/NavigationStyle"
            android:drawableTop="@drawable/ic_credit_card_black_24dp"
            android:text="@string/donations_library" />

    </LinearLayout>

</LinearLayout>
